# taxi-stand-app-server

./: .gitignore  README.md  configuration.py  get_nearby_taxi_batch.py  get_nearby_taxi_reg.py  get_taxistands.py  h3_distances.json  pyproject.toml  taxi_stands_data_new.json
get_taxistand_batch/: README.md  environment.yml  get_nearby_taxi_batch.py
src/data/: hk_boundary.json  petrol_stations.json  process.py  taxi_stands_data.json  taxi_stands_data_pure.json  taxi_stands_demand_client.json  taxi_stands_demand_client_minicase.json
src/server/: get_nearby_taxi.py  main.py  run.py
src/server/taxi_stands/: type.py  types.py  utils.py
